--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id "org.jetbrains.kotlin.jvm" version "1.3.61"
     id "org.jetbrains.kotlin.kapt" version "1.3.61"
+    id "org.jlleitschuh.gradle.ktlint" version "8.2.0"
 }
 
 group "be.boutiquemadame"
