--- a/.github/workflows/check-push.yml
+++ b/.github/workflows/check-push.yml
@@ -18,20 +18,17 @@ jobs:
         run: ./gradlew check
 
   tests:
-    name: Audit depedencies
+    name: Tests
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [12.x]
 
     steps:
       - name: Checkout
         uses: 'actions/checkout@master'
-  
+
       - name: Set Java
         uses: actions/setup-java@v1
         with:
           java-version: '8'
 
       - name: Run checks
-        run: ./gradlew tests
+        run: ./gradlew test
